# QApplicationContext

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
defs/: applicationcontextimplbase.h  cardinality.h  dependencykind.h  placeholderresolver.h  qapplicationcontext.h  qapplicationcontextregistration.h  qconfigurationwatcherimpl.h  qsettingswatcher.h  standardapplicationcontext.h  standardqapplicationcontext.h
docs/: annotated.html  applicationcontextimplbase_8h_source.html  classes.html  classmcnepp_1_1qtdi_1_1_application_context_impl_base-members.html  classmcnepp_1_1qtdi_1_1_application_context_impl_base.html  classmcnepp_1_1qtdi_1_1_condition-members.html  classmcnepp_1_1qtdi_1_1_condition.html  classmcnepp_1_1qtdi_1_1_condition_1_1_config_helper-members.html  classmcnepp_1_1qtdi_1_1_condition_1_1_config_helper.html  classmcnepp_1_1qtdi_1_1_condition_1_1_config_helper_1_1_entry-members.html  classmcnepp_1_1qtdi_1_1_condition_1_1_config_helper_1_1_entry.html  classmcnepp_1_1qtdi_1_1_condition_1_1_profile_helper-members.html  classmcnepp_1_1qtdi_1_1_condition_1_1_profile_helper.html  classmcnepp_1_1qtdi_1_1_proxy_registration-members.html  classmcnepp_1_1qtdi_1_1_proxy_registration.html  classmcnepp_1_1qtdi_1_1_q_application_context-members.html  classmcnepp_1_1qtdi_1_1_q_application_context.html  classmcnepp_1_1qtdi_1_1_q_application_context_post_processor-members.html  classmcnepp_1_1qtdi_1_1_q_application_context_post_processor.html  classmcnepp_1_1qtdi_1_1_q_configuration_resolver-members.html  classmcnepp_1_1qtdi_1_1_q_configuration_resolver.html  classmcnepp_1_1qtdi_1_1_q_configuration_watcher-members.html  classmcnepp_1_1qtdi_1_1_q_configuration_watcher.html  classmcnepp_1_1qtdi_1_1_registration-members.html  classmcnepp_1_1qtdi_1_1_registration.html  classmcnepp_1_1qtdi_1_1_registration_1_1_publication_notifier-members.html  classmcnepp_1_1qtdi_1_1_registration_1_1_publication_notifier.html  classmcnepp_1_1qtdi_1_1_service_combination-members.html  classmcnepp_1_1qtdi_1_1_service_combination.html  classmcnepp_1_1qtdi_1_1_service_config-members.html  classmcnepp_1_1qtdi_1_1_service_config.html  classmcnepp_1_1qtdi_1_1_service_registration-members.html  classmcnepp_1_1qtdi_1_1_service_registration.html  classmcnepp_1_1qtdi_1_1_standard_application_context-members.html  classmcnepp_1_1qtdi_1_1_standard_application_context.html  classmcnepp_1_1qtdi_1_1_subscription-members.html  classmcnepp_1_1qtdi_1_1_subscription.html  deprecated.html  dir_bb10e0eef1894d8a3498d86fbfe25351.html  doxygen_crawl.html  (+48 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_5.js  files_0.js  functions_0.js  functions_1.js  (+32 more)
src/: contextcondition.cpp  placeholderresolver.cpp  qapplicationcontext.cpp  qconfigurationwatcherimpl.cpp  qsettingswatcher.cpp  standardapplicationcontext.cpp  standardqapplicationcontext.cpp
test/: appcontexttestclasses.cpp  appcontexttestclasses.h  registrationslot.h  testplaceholderresolver.cpp  testqapplicationcontext.cpp  testqapplicationcontextcondition.cpp  testqapplicationcontextprofiles.cpp
